--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "webpack-merge": "^1.0.2"
   },
   "dependencies": {
+    "chart.js": "^2.5.0",
     "classnames": "^2.2.0",
     "cozy-bar": "3.0.0-beta14",
     "cozy-client-js": "0.1.9",
@@ -104,6 +105,7 @@
     "preact": "^7.1.0",
     "preact-compat": "^3.9.0",
     "react-bosonic": "1.0.0-beta6",
+    "react-chartjs-2": "^2.0.5",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
