--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "npm run build:browser",
     "build:browser": "NODE_ENV=browser:production npm run commons:build",
     "build:mobile": "NODE_ENV=mobile:production npm run commons:build",
-    "clean:browser": "rm -rf build",
+    "clean:browser": "rm -rf build/*",
     "clean:mobile": "rm -rf mobile/www",
     "commons:build": "webpack --config webpack.config.js --bail",
     "commons:watch": "webpack --config webpack.config.js --watch --display-modules --display-chunks",
