--- a/package.json
+++ b/package.json
@@ -112,7 +112,8 @@
     "redux-logger": "^2.7.4",
     "redux-mock-store": "^1.2.1",
     "redux-raven-middleware": "^1.2.0",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "reselect": "^3.0.1"
   },
   "jest": {
     "moduleFileExtensions": [
