--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "html-webpack-plugin": "^2.24.0",
     "identity-obj-proxy": "^3.0.0",
     "imports-loader": "^0.7.0",
-    "jest": "^18.0.0",
+    "jest": "^20.0.3",
     "json-loader": "^0.5.0",
     "npm-run-all": "^3.1.0",
     "postcss": "^5.2.0",
@@ -96,7 +96,7 @@
     "chart.js": "^2.5.0",
     "classnames": "^2.2.0",
     "cozy-bar": "3.0.0-beta14",
-    "cozy-client-js": "0.1.9",
+    "cozy-client-js": "^0.3.2",
     "cozy-ui": "3.0.0-beta27",
     "date-fns": "^1.28.2",
     "node-polyglot": "^2.2.0",
