--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "preact-compat": "^3.9.0",
     "react-bosonic": "1.0.0-beta6",
     "react-chartjs-2": "^2.0.5",
+    "react-hint": "^1.3.1",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
