feat: Save filters account :floppy_disk:

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lint": "npm-run-all --parallel 'lint:*'",
     "lint:js": "standard 'src/**/*.js' 'src/**/*.jsx' 'test/**/*.js' 'mobile/src/**/*.js' 'mobile/src/**/*.jsx' 'mobile/test/**/*.js'",
     "lint:styles": "stylint src/styles --config ./.stylintrc",
+    "stack:docker": "docker run --rm -it -p 8080:8080 -v \"$(pwd)/build/\":/data/cozy-app/bank cozy/cozy-app-dev",
     "test": "node --harmony_proxies node_modules/.bin/jest",
     "watch": "npm run watch:browser",
     "watch:browser": "NODE_ENV=browser:development npm run commons:watch",
@@ -99,6 +100,7 @@
     "cozy-client-js": "^0.3.2",
     "cozy-ui": "3.0.0-beta36",
     "date-fns": "^1.28.2",
+    "localforage": "^1.5.0",
     "node-polyglot": "^2.2.0",
     "piwik-react-router": "^0.8.2",
     "pouchdb": "^6.1.2",
