--- a/package.json
+++ b/package.json
@@ -96,7 +96,7 @@
   "dependencies": {
     "chart.js": "^2.5.0",
     "classnames": "^2.2.0",
-    "cozy-bar": "3.0.0-beta14",
+    "cozy-bar": "^3.0.1",
     "cozy-client-js": "^0.3.2",
     "cozy-ui": "3.0.0-beta38",
     "date-fns": "^1.28.2",
