feat: Add operation menu :fishing_pole_and_fish:

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "prewatch:browser": "npm run clean:browser",
     "prewatch:mobile": "npm run clean:mobile",
     "lint": "npm-run-all --parallel 'lint:*'",
-    "lint:js": "standard 'src/**/*.js' 'src/**/*.jsx' 'test/**/*.js' 'mobile/src/**/*.js' 'mobile/src/**/*.jsx' 'mobile/test/**/*.js'",
+    "lint:js": "standard --parser babel-eslint 'src/**/*.js' 'src/**/*.jsx' 'test/**/*.js'",
     "lint:styles": "stylint src/styles --config ./.stylintrc",
     "stack:docker": "docker run --rm -it -p 8080:8080 -v \"$(pwd)/build/\":/data/cozy-app/bank cozy/cozy-app-dev",
     "test": "node --harmony_proxies node_modules/.bin/jest",
@@ -51,6 +51,7 @@
   "devDependencies": {
     "autoprefixer": "^6.5.0",
     "babel-core": "^6.0.0",
+    "babel-eslint": "^7.2.3",
     "babel-jest": "^18.0.0",
     "babel-loader": "^6.0.0",
     "babel-plugin-transform-class-properties": "^6.23.0",
@@ -85,6 +86,7 @@
     "react-test-renderer": "^15.4.0",
     "script-ext-html-webpack-plugin": "^1.5.0",
     "standard": "^8.6.0",
+    "standard-loader": "^5",
     "style-loader": "^0.13.0",
     "stylint": "^1.5.9",
     "stylus": "^0.54.0",
