--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "cozy-client-js": "0.3.2",
     "cozy-ui": "3.0.0-beta38",
     "date-fns": "^1.28.2",
+    "hammerjs": "^2.0.8",
     "localforage": "^1.5.0",
     "node-polyglot": "^2.2.0",
     "piwik-react-router": "^0.8.2",
