--- a/package.json
+++ b/package.json
@@ -122,7 +122,8 @@
     "redux-mock-store": "^1.2.1",
     "redux-raven-middleware": "^1.2.0",
     "redux-thunk": "^2.1.0",
-    "reselect": "^3.0.1"
+    "reselect": "^3.0.1",
+    "velocity-animate": "^1.5.0"
   },
   "jest": {
     "moduleFileExtensions": [
