--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "hammerjs": "^2.0.8",
     "localforage": "^1.5.0",
     "node-polyglot": "^2.2.0",
+    "number-to-locale-string": "^1.0.1",
     "piwik-react-router": "^0.8.2",
     "pouchdb": "^6.1.2",
     "pouchdb-find": "^0.10.5",
