feat: Add notifications service :bell:

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "npm run build:browser",
     "build:browser": "NODE_ENV=browser:production npm run commons:build",
     "build:mobile": "NODE_ENV=mobile:production npm run commons:build",
+    "build:services": "NODE_ENV=services:production npm run commons:build",
     "clean:browser": "rm -rf build/*",
     "clean:mobile": "rm -rf mobile/www",
     "commons:build": "webpack --config webpack.config.js --bail",
@@ -28,6 +29,7 @@
     "watch": "npm run watch:browser",
     "watch:browser": "NODE_ENV=browser:development npm run commons:watch",
     "watch:mobile": "NODE_ENV=mobile:development npm run commons:watch",
+    "watch:services": "NODE_ENV=services:development npm run commons:watch",
     "watch:browser:standalone": "NODE_ENV=browser:development npm run commons:watch:standalone",
     "watch:mobile:standalone": "NODE_ENV=mobile:development npm run commons:watch:standalone",
     "android:run": "cd mobile ; cordova run android --device ; cd ..",
@@ -102,6 +104,7 @@
     "classnames": "^2.2.0",
     "cozy-bar": "4.1.3",
     "cozy-client-js": "0.3.2",
+    "cozy-konnector-libs": "^2.5.6",
     "cozy-ui": "git://github.com/cozy/cozy-ui.git#43b075fd0b294688ed3bc6cc4c3206438038fc7e",
     "date-fns": "^1.28.2",
     "eslint": "3.10.2",
