--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "env": { "es6": true },
+  "env": { "es6": true, "jasmine": true },
   "parser": "babel-eslint",
   "extends": ["standard", "standard-jsx"],
   "rules": {
