--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "prewatch:browser": "npm run clean:browser",
     "prewatch:mobile": "npm run clean:mobile",
     "lint": "npm-run-all --parallel 'lint:*'",
-    "lint:js": "standard --parser babel-eslint 'src/**/*.js' 'src/**/*.jsx' 'test/**/*.js'",
+    "lint:js": "eslint --parser babel-eslint 'src/**/*.js' 'src/**/*.jsx' 'test/**/*.js'",
     "lint:styles": "stylint src/styles --config ./.stylintrc",
     "stack:docker": "docker run --rm -it -p 8080:8080 -v \"$(pwd)/build/\":/data/cozy-app/bank cozy/cozy-app-dev",
     "test": "node --harmony_proxies node_modules/.bin/jest",
