--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,7 @@
   "parser": "babel-eslint",
   "extends": ["standard", "standard-jsx"],
   "rules": {
-    "react/jsx-wrap-multilines": 2
+    "react/jsx-wrap-multilines": 2,
+    "react/react-in-jsx-scope": 2
   }
 }
