--- a/package.json
+++ b/package.json
@@ -102,7 +102,7 @@
     "classnames": "^2.2.0",
     "cozy-bar": "4.1.3",
     "cozy-client-js": "0.3.2",
-    "cozy-ui": "3.0.0-beta44",
+    "cozy-ui": "git://github.com/cozy/cozy-ui.git#43b075fd0b294688ed3bc6cc4c3206438038fc7e",
     "date-fns": "^1.28.2",
     "eslint": "3.10.2",
     "eslint-loader": "^1.9.0",
