feat: upgrade to webpack 2, upgrade css-loader, stylus-loader, autoprexifer, extract-text-webpack-plugin

--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "ios:run:emulator": "cd mobile ; cordova run ios --emulator ; cd ..",
     "commons:services": "webpack --config config/webpack.target.services.js",
     "build:services": "NODE_ENV=services:production yarn run commons:services",
-    "watch:services": "NODE_ENV=services:development yarn run commons:services -- --watch"
+    "watch:services": "NODE_ENV=services:development yarn run commons:services -- --watch",
+    "styleguide": "styleguidist server",
+    "styleguide:build": "styleguidist build"
   },
   "repository": {
     "type": "git",
@@ -53,7 +55,7 @@
   },
   "homepage": "https://github.com/<USERNAME_GH>/<SLUG_GH>#readme",
   "devDependencies": {
-    "autoprefixer": "^6.5.0",
+    "autoprefixer": "^7.1.4",
     "babel-core": "^6.0.0",
     "babel-eslint": "^7.2.3",
     "babel-jest": "^18.0.0",
@@ -66,11 +68,11 @@
     "babel-preset-react": "^6.16.0",
     "babel-runtime": "^6.0.0",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.26.0",
+    "css-loader": "^0.28.7",
     "css-mqpacker": "^4.0.1",
     "csswring": "^5.1.1",
     "enzyme": "^2.7.0",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "2",
     "file-loader": "^0.9.0",
     "git-directory-deploy": "^1.5.0",
     "html-webpack-plugin": "^2.24.0",
@@ -82,7 +84,7 @@
     "postcss": "^5.2.0",
     "postcss-assets-webpack-plugin": "^1.1.0",
     "postcss-discard-duplicates": "^2.0.2",
-    "postcss-loader": "^1.1.0",
+    "postcss-loader": "^2.0.6",
     "react": "^15.4.0",
     "react-addons-test-utils": "^15.4.2",
     "react-dom": "^15.4.0",
@@ -94,9 +96,9 @@
     "style-loader": "^0.13.0",
     "stylint": "^1.5.9",
     "stylus": "^0.54.0",
-    "stylus-loader": "^2.4.0",
+    "stylus-loader": "^3.0.1",
     "svg-sprite-loader": "^0.3.1",
-    "webpack": "^1.14.0",
+    "webpack": "2",
     "webpack-dev-server": "^1.16.0",
     "webpack-merge": "^1.0.2"
   },
