chore: add command to deploy styleguide

--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "build:services": "NODE_ENV=services:production yarn run commons:services",
     "watch:services": "NODE_ENV=services:development yarn run commons:services -- --watch",
     "styleguide": "styleguidist server",
-    "styleguide:build": "styleguidist build"
+    "styleguide:build": "styleguidist build",
+    "styleguide:deploy": "yarn git-directory-deploy -- --directory styleguide --branch master --repo docs"
   },
   "repository": {
     "type": "git",
