--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "lint": "npm-run-all --parallel 'lint:*'",
     "lint:js": "eslint --parser babel-eslint 'src/**/*.js' 'src/**/*.jsx' 'test/**/*.js'",
     "lint:styles": "stylint src/styles --config ./.stylintrc",
-    "stack:docker": "docker run --rm -it -p 8080:8080 -v \"$(pwd)/build/\":/data/cozy-app/bank cozy/cozy-app-dev",
+    "stack:docker": "docker run --rm -it -p 8080:8080 -p 8025:8025 -v \"$(pwd)/build/\":/data/cozy-app/bank cozy/cozy-app-dev",
     "test": "node --harmony_proxies node_modules/.bin/jest",
     "watch": "npm run watch:browser",
     "watch:browser": "NODE_ENV=browser:development npm run commons:watch",
