--- a/package.json
+++ b/package.json
@@ -72,7 +72,13 @@
     "css-loader": "^0.28.7",
     "css-mqpacker": "^4.0.1",
     "csswring": "^5.1.1",
-    "enzyme": "^2.7.0",
+    "eslint": "^4.6.1",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-config-standard-jsx": "^4.0.2",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-react": "^7.3.0",
     "extract-text-webpack-plugin": "3",
     "file-loader": "^0.9.0",
     "git-directory-deploy": "^1.5.0",
@@ -92,8 +98,6 @@
     "react-styleguidist": "^6.0.24",
     "react-test-renderer": "^15.4.0",
     "script-ext-html-webpack-plugin": "^1.5.0",
-    "standard": "^8.6.0",
-    "standard-loader": "^5",
     "style-loader": "^0.13.0",
     "stylint": "^1.5.9",
     "stylus": "^0.54.0",
@@ -111,15 +115,13 @@
     "cozy-konnector-libs": "^2.5.6",
     "cozy-ui": "git://github.com/cozy/cozy-ui.git#82ef346296767c18a19eecb5d42230d0af227e0f",
     "date-fns": "^1.28.2",
-    "eslint": "3.10.2",
-    "eslint-loader": "^1.9.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-standard": "^3.0.1",
     "hammerjs": "^2.0.8",
     "localforage": "^1.5.0",
     "node-polyglot": "^2.2.0",
     "number-to-locale-string": "^1.0.1",
     "piwik-react-router": "^0.8.2",
-    "pouchdb": "^6.1.2",
-    "pouchdb-find": "^0.10.5",
     "preact": "^8.2.5",
     "preact-compat": "^3.17.0",
     "react-bosonic": "1.0.0-beta6",
@@ -129,8 +131,6 @@
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.4",
-    "redux-mock-store": "^1.2.1",
-    "redux-raven-middleware": "^1.2.0",
     "redux-thunk": "^2.1.0",
     "reselect": "^3.0.1",
     "velocity-animate": "^1.5.0"
