--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "lint:js": "eslint --parser babel-eslint 'src/**/*.js' 'src/**/*.jsx' 'test/**/*.js'",
     "lint:styles": "stylint src/styles --config ./.stylintrc",
     "stack:docker": "docker run --rm -it -p 8080:8080 -p 8025:8025 -v \"$(pwd)/build/\":/data/cozy-app/bank cozy/cozy-app-dev",
-    "test": "node --harmony_proxies node_modules/.bin/jest",
+    "test": "jest",
     "watch": "npm run watch:browser",
     "watch:browser": "NODE_ENV=browser:development npm run commons:watch",
     "watch:mobile": "NODE_ENV=mobile:development npm run commons:watch",
