--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "scripts": {
     "build": "npm run build:browser",
     "build:browser": "NODE_ENV=browser:production npm run commons:build",
-    "build:mobile": "NODE_ENV=mobile:production npm run commons:build",
+    "build:mobile":
+      "NODE_ENV=mobile:production npm run commons:build -- --env.target=mobile",
     "clean:browser": "rm -rf build/*",
-    "clean:mobile": "rm -rf mobile/www",
+    "clean:mobile": "rm -rf src/targets/mobile/www",
     "commons:build": "webpack --config webpack.config.js --bail",
     "commons:watch": "webpack --config webpack.config.js --watch",
     "commons:watch:standalone": "webpack-dev-server --config webpack.config.js --port 8282 --inline --hot",
@@ -27,16 +28,26 @@
     "test": "jest",
     "watch": "npm run watch:browser",
     "watch:browser": "NODE_ENV=browser:development npm run commons:watch",
-    "watch:mobile": "NODE_ENV=mobile:development npm run commons:watch",
-    "watch:browser:standalone": "NODE_ENV=browser:development npm run commons:watch:standalone",
-    "watch:mobile:standalone": "NODE_ENV=mobile:development npm run commons:watch:standalone",
-    "android:run": "cd mobile ; cordova run android --device ; cd ..",
-    "android:run:emulator": "cd mobile ; cordova run android --emulator ; cd ..",
-    "android:release": "npm run build:mobile && cd mobile ; cordova build android --release ; cd ..",
-    "android:signed": "npm run android:release && cd mobile ; apksigner sign --ks keys/android/<APP_NAME>-release-key.jks --out build/android/<APP_NAME>.apk platforms/android/build/outputs/apk/android-release-unsigned.apk ; cd ..",
-    "android:publish": "npm run android:signed && cd mobile ; fastlane supply ; cd ..",
-    "ios:run": "cd mobile ; cordova run ios --device ; cd ..",
-    "ios:run:emulator": "cd mobile ; cordova run ios --emulator ; cd ..",
+    "watch:mobile":
+      "NODE_ENV=mobile:development npm run commons:watch -- --env.target=mobile",
+    "watch:browser:standalone":
+      "NODE_ENV=browser:development npm run commons:watch:standalone",
+    "watch:mobile:standalone":
+      "NODE_ENV=mobile:development npm run commons:watch:standalone",
+    "android:prepare":
+      "(cd src/targets/mobile && cordova platform add android && cordova prepare)",
+    "android:run": "(cd src/targets/mobile && cordova run android --device)",
+    "android:run:emulator": "(cd mobile && cordova run android --emulator)",
+    "android:release":
+      "npm run build:mobile && (cd mobile && cordova build android --release)",
+    "android:signed":
+      "npm run android:release && (cd mobile && apksigner sign --ks keys/android/<APP_NAME>-release-key.jks --out build/android/<APP_NAME>.apk platforms/android/build/outputs/apk/android-release-unsigned.apk)",
+    "android:publish":
+      "npm run android:signed && (cd mobile && fastlane supply)",
+    "ios:prepare":
+      "(cd src/targets/mobile && cordova platform add ios && cordova prepare)",
+    "ios:run": "(cd mobile && cordova run ios --device)",
+    "ios:run:emulator": "(cd mobile && cordova run ios --emulator)",
     "commons:services": "webpack --config config/webpack.target.services.js",
     "build:services": "NODE_ENV=services:production yarn run commons:services",
     "watch:services": "NODE_ENV=services:development yarn run commons:services -- --watch",
