--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "build": "npm run build:browser",
     "build:browser": "NODE_ENV=browser:production npm run commons:build",
-    "build:mobile":
-      "NODE_ENV=mobile:production npm run commons:build -- --env.target=mobile",
+    "build:mobile": "NODE_ENV=mobile:production npm run commons:build -- --env.target=mobile",
     "clean:browser": "rm -rf build/*",
     "clean:mobile": "rm -rf src/targets/mobile/www",
     "commons:build": "webpack --config webpack.config.js --bail",
@@ -22,32 +21,24 @@
     "prewatch:browser": "npm run clean:browser",
     "prewatch:mobile": "npm run clean:mobile",
     "lint": "npm-run-all --parallel 'lint:*'",
-    "lint:js": "eslint --parser babel-eslint 'src/**/*.js' 'src/**/*.jsx' 'test/**/*.js'",
+    "lint:js": "eslint --parser babel-eslint \"'src/**/*.js' 'src/**/*.jsx' 'test/**/*.js'\"",
     "lint:styles": "stylint src/styles --config ./.stylintrc",
     "stack:docker": "docker run --rm -it -p 8080:8080 -p 8025:8025 -v \"$(pwd)/build/\":/data/cozy-app/bank cozy/cozy-app-dev",
     "test": "jest",
     "watch": "npm run watch:browser",
     "watch:browser": "NODE_ENV=browser:development npm run commons:watch",
-    "watch:mobile":
-      "NODE_ENV=mobile:development npm run commons:watch -- --env.target=mobile",
-    "watch:browser:standalone":
-      "NODE_ENV=browser:development npm run commons:watch:standalone",
-    "watch:mobile:standalone":
-      "NODE_ENV=mobile:development npm run commons:watch:standalone",
-    "android:prepare":
-      "(cd src/targets/mobile && cordova platform add android && cordova prepare)",
+    "watch:mobile": "NODE_ENV=mobile:development npm run commons:watch -- --env.target=mobile",
+    "watch:browser:standalone": "NODE_ENV=browser:development npm run commons:watch:standalone",
+    "watch:mobile:standalone": "NODE_ENV=mobile:development npm run commons:watch:standalone",
+    "android:prepare": "(cd src/targets/mobile && cordova platform add android && cordova prepare)",
     "android:run": "(cd src/targets/mobile && cordova run android --device)",
-    "android:run:emulator": "(cd mobile && cordova run android --emulator)",
-    "android:release":
-      "npm run build:mobile && (cd mobile && cordova build android --release)",
-    "android:signed":
-      "npm run android:release && (cd mobile && apksigner sign --ks keys/android/<APP_NAME>-release-key.jks --out build/android/<APP_NAME>.apk platforms/android/build/outputs/apk/android-release-unsigned.apk)",
-    "android:publish":
-      "npm run android:signed && (cd mobile && fastlane supply)",
-    "ios:prepare":
-      "(cd src/targets/mobile && cordova platform add ios && cordova prepare)",
-    "ios:run": "(cd mobile && cordova run ios --device)",
-    "ios:run:emulator": "(cd mobile && cordova run ios --emulator)",
+    "android:run:emulator": "(cd src/targets/mobile && cordova run android --emulator)",
+    "android:release": "npm run build:mobile && (cd mobile && cordova build android --release)",
+    "android:signed": "npm run android:release && (cd mobile && apksigner sign --ks keys/android/<APP_NAME>-release-key.jks --out build/android/<APP_NAME>.apk platforms/android/build/outputs/apk/android-release-unsigned.apk)",
+    "android:publish": "npm run android:signed && (cd mobile && fastlane supply)",
+    "ios:prepare": "(cd src/targets/mobile && cordova platform add ios && cordova prepare)",
+    "ios:run": "(cd src/targets/mobile && cordova run ios --device)",
+    "ios:run:emulator": "(cd src/targets/mobile && cordova run ios --emulator)",
     "commons:services": "webpack --config config/webpack.target.services.js",
     "build:services": "NODE_ENV=services:production yarn run commons:services",
     "watch:services": "NODE_ENV=services:development yarn run commons:services -- --watch",
@@ -119,6 +110,7 @@
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "chart.js": "^2.7.0",
     "classnames": "^2.2.0",
     "cozy-bar": "4.1.4",
@@ -140,6 +132,7 @@
     "react-bosonic": "1.0.0-beta6",
     "react-chartjs-2": "^2.0.5",
     "react-hint": "^1.3.1",
+    "react-markdown": "^2.5.0",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
