feat: add icons and splash screens

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,9 @@ desktop.ini
 **/mobile/plugins
 **/mobile/www
 **/mobile/keys
+**/mobile/res/icons
+**/mobile/res/screens
+**/mobile/store
 
 
 # fastlane
