--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     "android:prepare": "(cd src/targets/mobile && cordova platform add android && cordova prepare)",
     "android:run": "(cd src/targets/mobile && cordova run android --device)",
     "android:run:emulator": "(cd src/targets/mobile && cordova run android --emulator)",
-    "android:release": "npm run build:mobile && (cd mobile && cordova build android --release)",
-    "android:signed": "npm run android:release && (cd mobile && apksigner sign --ks keys/android/<APP_NAME>-release-key.jks --out build/android/<APP_NAME>.apk platforms/android/build/outputs/apk/android-release-unsigned.apk)",
-    "android:publish": "npm run android:signed && (cd mobile && fastlane supply)",
+    "android:release": "npm run build:mobile && (cd src/targets/mobile && cordova build android --release)",
+    "android:signed": "npm run android:release && (cd src/targets/mobile && apksigner sign --ks keys/android/<APP_NAME>-release-key.jks --out build/android/<APP_NAME>.apk platforms/android/build/outputs/apk/android-release-unsigned.apk)",
+    "android:publish": "npm run android:signed && (cd src/targets/mobile && fastlane supply)",
     "ios:prepare": "(cd src/targets/mobile && cordova platform add ios && cordova prepare)",
     "ios:run": "(cd src/targets/mobile && cordova run ios --device)",
     "ios:run:emulator": "(cd src/targets/mobile && cordova run ios --emulator)",
