--- a/package.json
+++ b/package.json
@@ -144,19 +144,12 @@
     "velocity-animate": "^1.5.0"
   },
   "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "jsx",
-      "json",
-      "styl"
-    ],
+    "moduleFileExtensions": ["js", "jsx", "json", "styl"],
     "moduleNameMapper": {
       "\\.(png|gif|jpe?g|svg)$": "<rootDir>/test/__mocks__/fileMock.js",
       "styles": "identity-obj-proxy"
     },
-    "transformIgnorePatterns": [
-      "node_modules/(?!cozy-ui)"
-    ],
+    "transformIgnorePatterns": ["node_modules/(?!cozy-ui)"],
     "globals": {
       "__ALLOW_HTTP__": false,
       "__TARGET__": "browser",
@@ -165,9 +158,6 @@
     }
   },
   "standard": {
-    "env": [
-      "browser",
-      "jest"
-    ]
+    "env": ["browser", "jest"]
   }
 }
