use prop-types library
as explained https://reactjs.org/docs/typechecking-with-proptypes.html
React.PropTypes has moved into a different package since React v15.5.

--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "postcss-assets-webpack-plugin": "^1.1.0",
     "postcss-discard-duplicates": "^2.0.2",
     "postcss-loader": "^2.0.6",
+    "prop-types": "^15.6.0",
     "react": "^15.4.0",
     "react-addons-test-utils": "^15.4.2",
     "react-dom": "^15.4.0",
