--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "chart.js": "^2.7.0",
     "classnames": "^2.2.0",
     "cozy-bar": "4.1.4",
+    "cozy-client": "0.1.0",
     "cozy-client-js": "^0.3.19",
     "cozy-konnector-libs": "^2.5.6",
     "cozy-ui": "git://github.com/cozy/cozy-ui.git#9bbd5f0405b6151ea4a0a1585d93f66a67231d98",
