--- a/package.json
+++ b/package.json
@@ -115,7 +115,7 @@
     "babel-polyfill": "^6.26.0",
     "chart.js": "^2.7.0",
     "classnames": "^2.2.0",
-    "cozy-bar": "4.1.4",
+    "cozy-bar": "4.3.3",
     "cozy-client": "0.1.0",
     "cozy-client-js": "^0.3.19",
     "cozy-konnector-libs": "^2.5.6",
@@ -146,12 +146,19 @@
     "velocity-animate": "^1.5.0"
   },
   "jest": {
-    "moduleFileExtensions": ["js", "jsx", "json", "styl"],
+    "moduleFileExtensions": [
+      "js",
+      "jsx",
+      "json",
+      "styl"
+    ],
     "moduleNameMapper": {
       "\\.(png|gif|jpe?g|svg)$": "<rootDir>/test/__mocks__/fileMock.js",
       "styles": "identity-obj-proxy"
     },
-    "transformIgnorePatterns": ["node_modules/(?!cozy-ui)"],
+    "transformIgnorePatterns": [
+      "node_modules/(?!cozy-ui)"
+    ],
     "globals": {
       "__ALLOW_HTTP__": false,
       "__TARGET__": "browser",
@@ -160,6 +167,9 @@
     }
   },
   "standard": {
-    "env": ["browser", "jest"]
+    "env": [
+      "browser",
+      "jest"
+    ]
   }
 }
