--- a/package.json
+++ b/package.json
@@ -118,7 +118,7 @@
     "classnames": "^2.2.0",
     "cordova": "^7.1.0",
     "cozy-bar": "4.3",
-    "cozy-client": "^0.2.1",
+    "cozy-client": "0.3.0",
     "cozy-client-js": "^0.4.1",
     "cozy-konnector-libs": "^2.5.6",
     "cozy-ui": "git://github.com/cozy/cozy-ui.git#9bbd5f0405b6151ea4a0a1585d93f66a67231d98",
@@ -130,8 +130,6 @@
     "node-polyglot": "^2.2.0",
     "number-to-locale-string": "^1.0.1",
     "piwik-react-router": "^0.9.0",
-    "pouchdb": "6.3.4",
-    "pouchdb-find": "^0.10.4",
     "preact": "^8.2.5",
     "preact-compat": "^3.17.0",
     "react-bosonic": "1.0.0-beta6",
