✨ feat: ability to delete an account and associated transactions
- also remove it from the groups

--- a/package.json
+++ b/package.json
@@ -152,12 +152,17 @@
       "json",
       "styl"
     ],
+    "moduleDirectories": [
+      "node_modules",
+      "src"
+    ],
     "moduleNameMapper": {
       "\\.(png|gif|jpe?g|svg)$": "<rootDir>/test/__mocks__/fileMock.js",
-      "styles": "identity-obj-proxy"
+      "styles": "identity-obj-proxy",
+      "styl$": "identity-obj-proxy"
     },
     "transformIgnorePatterns": [
-      "node_modules/(?!cozy-ui)"
+      "node_modules/(?!(cozy-ui|cozy-client))"
     ],
     "globals": {
       "__ALLOW_HTTP__": false,
