--- a/package.json
+++ b/package.json
@@ -119,7 +119,7 @@
     "cordova": "^7.1.0",
     "cozy-bar": "4.3",
     "cozy-client": "0.3.0",
-    "cozy-client-js": "^0.4.1",
+    "cozy-client-js": "0.3.19",
     "cozy-konnector-libs": "^2.5.6",
     "cozy-ui": "git://github.com/cozy/cozy-ui.git#9bbd5f0405b6151ea4a0a1585d93f66a67231d98",
     "date-fns": "^1.28.2",
