--- a/package.json
+++ b/package.json
@@ -121,7 +121,7 @@
     "cozy-client": "0.3.0",
     "cozy-client-js": "0.3.19",
     "cozy-konnector-libs": "^2.5.6",
-    "cozy-ui": "git://github.com/cozy/cozy-ui.git#9bbd5f0405b6151ea4a0a1585d93f66a67231d98",
+    "cozy-ui": "4",
     "date-fns": "^1.28.2",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-standard": "^3.0.1",
