--- a/package.json
+++ b/package.json
@@ -117,7 +117,7 @@
     "chart.js": "^2.7.0",
     "classnames": "^2.2.0",
     "cordova": "^7.1.0",
-    "cozy-bar": "4.3",
+    "cozy-bar": "^4.5.1",
     "cozy-client": "0.3.0",
     "cozy-client-js": "0.3.19",
     "cozy-konnector-libs": "^2.5.6",
