🔧 chore: use babel-preset-cozy-app

--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,3 @@
 {
-  "presets": [
-    ["env", {
-      "targets": {
-        "chrome": 42,
-        "browsers": ["last 2 versions"]
-      },
-      "useBuiltIns": true
-    }],
-    "react"
-  ],
-  "plugins": ["transform-object-rest-spread", "transform-class-properties"]
+  "presets": ["cozy-app"]
 }
