--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "react-styleguidist": "^6.0.24",
     "react-test-renderer": "^15.4.0",
     "script-ext-html-webpack-plugin": "^1.5.0",
+    "sort-css-media-queries": "^1.3.4",
     "style-loader": "^0.18.2",
     "stylint": "^1.5.9",
     "stylus": "^0.54.0",
