--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "extract-text-webpack-plugin": "3",
     "file-loader": "^0.11.2",
     "git-directory-deploy": "^1.5.0",
+    "handlebars-layouts": "^3.1.4",
     "html-webpack-plugin": "^2.24.0",
     "identity-obj-proxy": "^3.0.0",
     "imports-loader": "^0.7.0",
@@ -129,6 +130,7 @@
     "eslint-plugin-standard": "^3.0.1",
     "hammerjs": "^2.0.8",
     "localforage": "^1.5.0",
+    "mjml": "^3.3.5",
     "node-polyglot": "^2.2.0",
     "number-to-locale-string": "^1.0.1",
     "piwik-react-router": "^0.9.0",
