--- a/package.json
+++ b/package.json
@@ -31,13 +31,12 @@
     "watch:browser:standalone": "NODE_ENV=browser:development npm run commons:watch:standalone",
     "watch:mobile:standalone": "NODE_ENV=mobile:development npm run commons:watch:standalone",
     "mobile:icon": "(cd src/targets/mobile && splashicon-generator --imagespath='./res/model')",
-    "android:prepare": "(cd src/targets/mobile && cordova platform add android && cordova prepare)",
+    "mobile:prepare": "(cd src/targets/mobile && cordova prepare)",
     "android:run": "(cd src/targets/mobile && cordova run android --device)",
     "android:run:emulator": "(cd src/targets/mobile && cordova run android --emulator)",
     "android:release": "npm run build:mobile && (cd src/targets/mobile && cordova build android --release)",
     "android:signed": "npm run android:release && (cd src/targets/mobile && apksigner sign --ks keys/android/<APP_NAME>-release-key.jks --out build/android/<APP_NAME>.apk platforms/android/build/outputs/apk/android-release-unsigned.apk)",
     "android:publish": "npm run android:signed && (cd src/targets/mobile && fastlane supply)",
-    "ios:prepare": "(cd src/targets/mobile && cordova platform add ios && cordova prepare)",
     "ios:run": "(cd src/targets/mobile && cordova run ios --device)",
     "ios:run:emulator": "(cd src/targets/mobile && cordova run ios --emulator)",
     "ios:publish": "npm run build:mobile && (cd src/targets/mobile && fastlane ios testflight)",
