--- a/package.json
+++ b/package.json
@@ -135,10 +135,9 @@
     "mjml": "^3.3.5",
     "node-polyglot": "^2.2.0",
     "number-to-locale-string": "^1.0.1",
-    "piwik-react-router": "^0.9.0",
+    "piwik-react-router": "0.8.2",
     "preact": "^8.2.5",
     "preact-compat": "^3.17.0",
-    "react-bosonic": "1.0.0-beta6",
     "react-chartjs-2": "^2.0.5",
     "react-hint": "^1.3.1",
     "react-markdown": "^2.5.0",
