--- a/package.json
+++ b/package.json
@@ -148,6 +148,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.1.0",
     "reselect": "^3.0.1",
+    "shebang-loader": "^0.0.1",
     "splashicon-generator": "^0.2.12",
     "stats-webpack-plugin": "^0.6.1",
     "string-replace-webpack-plugin": "^0.1.3",
