🐝 fix: ios:publish command had wrong lane and was redoing the webpack build each time

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "android:publish": "npm run android:signed && (cd src/targets/mobile && fastlane supply)",
     "ios:run": "(cd src/targets/mobile && cordova run ios --device)",
     "ios:run:emulator": "(cd src/targets/mobile && cordova run ios --emulator)",
-    "ios:publish": "npm run build:mobile && (cd src/targets/mobile && fastlane ios testflight)",
+    "ios:publish": "cd src/targets/mobile && fastlane ios pushtest",
     "commons:services": "webpack --config config/webpack.target.services.js",
     "build:services": "NODE_ENV=services:production yarn run commons:services",
     "watch:services": "NODE_ENV=services:development yarn run commons:services --watch",
