--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-cozy-app": "^0.3.1",
     "chart.js": "^2.7.0",
+    "classificator": "0.1.3",
     "classnames": "^2.2.0",
     "cordova": "^7.1.0",
     "cozy-bar": "4.5.5",
