🔧 chore: add command to serve mobile assets while watching

--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "watch": "npm run watch:browser",
     "watch:browser": "NODE_ENV=browser:development npm run commons:watch",
     "watch:mobile": "NODE_ENV=mobile:development npm run commons:watch -- --env.target=mobile",
-    "watch:browser:standalone": "NODE_ENV=browser:development npm run commons:watch:standalone",
-    "watch:mobile:standalone": "NODE_ENV=mobile:development npm run commons:watch:standalone",
+    "watch:mobile:production": "NODE_ENV=mobile:production npm run commons:watch -- --env.target=mobile",
+    "serve:mobile": "cd src/targets/mobile/www && http-server -p 8005",
     "mobile:icon": "(cd src/targets/mobile && splashicon-generator --imagespath='./res/model')",
     "mobile:prepare": "(cd src/targets/mobile && cordova prepare)",
     "android:run": "(cd src/targets/mobile && cordova run android --device)",
