fix: if no billId, cannot split. extract code to "model" file

--- a/package.json
+++ b/package.json
@@ -182,6 +182,7 @@
     "globals": {
       "__ALLOW_HTTP__": false,
       "__TARGET__": "browser",
+      "__DEVELOPMENT__": false,
       "__SENTRY_TOKEN__": "token",
       "cozy": {}
     }
