--- a/package.json
+++ b/package.json
@@ -142,6 +142,7 @@
     "piwik-react-router": "0.8.2",
     "preact": "^8.2.5",
     "preact-compat": "^3.17.0",
+    "preact-portal": "^1.1.2",
     "raw-loader": "^0.5.1",
     "react-chartjs-2": "^2.0.5",
     "react-hint": "^1.3.1",
