--- a/package.json
+++ b/package.json
@@ -140,7 +140,7 @@
     "null-loader": "^0.1.1",
     "number-to-locale-string": "^1.0.1",
     "piwik-react-router": "0.8.2",
-    "preact": "^8.2.5",
+    "preact": "8.2.7",
     "preact-compat": "^3.17.0",
     "preact-portal": "^1.1.2",
     "raw-loader": "^0.5.1",
