🔧 chore: remove unused test and only match on test files with "spec" or in __tests__
there is a lib that has a test that fails otherwise

--- a/package.json
+++ b/package.json
@@ -186,7 +186,10 @@
       "__DEVELOPMENT__": false,
       "__SENTRY_TOKEN__": "token",
       "cozy": {}
-    }
+    },
+    "testMatch": [
+      "**/__tests__/**/*.js?(x)", "**/?(*.)(spec).js?(x)"
+    ]
   },
   "standard": {
     "env": [
