--- a/package.json
+++ b/package.json
@@ -188,7 +188,8 @@
       "cozy": {}
     },
     "testMatch": [
-      "**/__tests__/**/*.js?(x)", "**/?(*.)(spec).js?(x)"
+      "**/__tests__/**/*.js?(x)",
+      "**/?(*.)(spec).js?(x)"
     ]
   },
   "standard": {
