--- a/.eslintrc
+++ b/.eslintrc
@@ -5,5 +5,8 @@
   "rules": {
     "react/jsx-wrap-multilines": 2,
     "react/react-in-jsx-scope": 2
+  },
+  "globals": {
+    "jest": true
   }
 }
