--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "prewatch:browser": "npm run clean:browser",
     "prewatch:mobile": "npm run clean:mobile",
     "lint": "npm-run-all --parallel 'lint:*'",
-    "lint:js": "eslint --parser babel-eslint 'src/**/*.js' 'src/**/*.jsx' 'test/**/*.js' --ignore-pattern 'src/targets/**/*' --ignore-pattern '*.min.js'",
+    "lint:js": "eslint 'src/**/*.js' 'src/**/*.jsx' 'test/**/*.js'",
     "lint:styles": "stylint src/styles --config ./.stylintrc",
     "stack:docker": "docker run --rm -it -p 8080:8080 -p 8025:8025 -v \"$(pwd)/build/\":/data/cozy-app/banks cozy/cozy-app-dev",
     "test": "jest",
