--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "yarnhook": "^0.1.1"
   },
   "dependencies": {
+    "airbnb-prop-types": "^2.8.1",
     "babel-plugin-lodash": "^3.3.2",
     "babel-polyfill": "^6.26.0",
     "babel-preset-cozy-app": "^0.3.1",
