feat: Deploy ios app on the appstore 🚀

--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "android:run:emulator": "(cd src/targets/mobile && cordova run android --emulator)",
     "android:release": "npm run build:mobile && (cd src/targets/mobile && cordova build android --release)",
     "android:signed": "npm run android:release && (cd src/targets/mobile && apksigner sign --ks keys/android/cozy-banks-release-key.jks --out build/android/cozy-banks.apk platforms/android/app/build/outputs/apk/release/app-release-unsigned.apk)",
-    "android:publish": "npm run android:signed && (cd src/targets/mobile && fastlane supply --validate_only --apk build/android/cozy-banks.apk)",
+    "android:metadata": "(cd src/targets/mobile && bundle exec fastlane android metadata)",
+    "android:publish": "npm run android:signed && (cd src/targets/mobile && bundle exec fastlane android deploy)",
     "ios:run": "(cd src/targets/mobile && cordova run ios --device)",
     "ios:run:emulator": "(cd src/targets/mobile && cordova run ios --emulator)",
-    "ios:publish": "cd src/targets/mobile && fastlane ios pushtest",
+    "ios:metadata": "(cd src/targets/mobile && bundle exec fastlane ios metadata)",
+    "ios:publish": "npm run build:mobile && (cd src/targets/mobile && bundle exec fastlane ios deploy)",
     "commons:services": "webpack --config config/webpack.target.services.js",
     "build:services": "NODE_ENV=services:production yarn run commons:services",
     "watch:services": "NODE_ENV=services:development yarn run commons:services --watch",
