--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "watch:mobile:production": "NODE_ENV=mobile:production npm run commons:watch -- --env.target=mobile",
     "serve:mobile": "cd src/targets/mobile/www && http-server -p 8005",
     "mobile:icon": "(cd src/targets/mobile && splashicon-generator --imagespath='./res/model')",
-    "mobile:prepare": "(cd src/targets/mobile && cordova prepare)",
+    "mobile:prepare": "(cd src/targets/mobile && rm -r package.json node_modules platforms plugins && cordova prepare)",
     "android:run": "(cd src/targets/mobile && cordova run android --device)",
     "android:run:emulator": "(cd src/targets/mobile && cordova run android --emulator)",
-    "android:release": "npm run build:mobile && (cd src/targets/mobile && cordova build android --release)",
+    "android:release": "npm run mobile:prepare && npm run build:mobile && (cd src/targets/mobile && cordova build android --release)",
     "android:signed": "npm run android:release && (cd src/targets/mobile && apksigner sign --ks keys/android/cozy-banks-release-key.jks --out build/android/cozy-banks.apk platforms/android/app/build/outputs/apk/release/app-release-unsigned.apk)",
     "android:metadata": "(cd src/targets/mobile && bundle exec fastlane android metadata)",
     "android:publish": "npm run android:signed && (cd src/targets/mobile && bundle exec fastlane android deploy)",
