chore: Update ACH dependency 🔗

--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
   },
   "homepage": "https://gitlab.cozycloud.cc/labs/cozy-bank#readme",
   "devDependencies": {
-    "ach": "git+ssh://git@gitlab.cozycloud.cc/labs/ACH.git",
+    "ach": "0.3.0",
     "autoprefixer": "^7.1.4",
     "babel-core": "^6.0.0",
     "babel-eslint": "^8.0.0",
