chore: Add preprod deploy by Travis 🚀

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,3 +30,9 @@ deploy:
     script: DEPLOY_BRANCH=latest ./scripts/deploy-on-cozy
     on:
       branch: prod
+  - provider: script
+    repo: cozy/cozy-banks
+    skip-cleanup: true
+    script: DEPLOY_BRANCH=preprod-build ./scripts/deploy-on-cozy
+    on:
+      branch: preprod
