feat: Add more information on Travis 🧐

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ deploy:
   - provider: script
     repo: cozy/cozy-banks
     skip-cleanup: true
-    script: ./scripts/deploy-on-cozy
+    script: DEPLOY_BRANCH=build ./scripts/deploy-on-cozy
     on:
       branch: master
   - provider: script
