--- a/package.json
+++ b/package.json
@@ -28,19 +28,21 @@
     "watch:browser": "NODE_ENV=browser:development npm run commons:watch",
     "watch:mobile": "NODE_ENV=mobile:development npm run commons:watch -- --env.target=mobile",
     "watch:mobile:production": "NODE_ENV=mobile:production npm run commons:watch -- --env.target=mobile",
-    "serve:mobile": "cd src/targets/mobile/www && http-server -p 8005",
+    "serve:mobile": "(cd src/targets/mobile/www && http-server -p 8005)",
     "mobile:icon": "(cd src/targets/mobile && splashicon-generator --imagespath='./res/model')",
-    "mobile:prepare": "(cd src/targets/mobile && rm -rf package.json node_modules platforms plugins && cordova prepare)",
+    "mobile:prepare": "(cd src/targets/mobile && cordova prepare)",
+    "mobile:clean": "(cd src/targets/mobile && rm -rf package.json node_modules platforms plugins)",
+    "mobile:build": "npm run build:mobile && npm run mobile:clean && npm run mobile:prepare",
     "android:run": "(cd src/targets/mobile && cordova run android --device)",
     "android:run:emulator": "(cd src/targets/mobile && cordova run android --emulator)",
-    "android:release": "npm run mobile:prepare && npm run build:mobile && (cd src/targets/mobile && cordova build android --release)",
+    "android:release": "npm run mobile:build && (cd src/targets/mobile && cordova build android --release)",
     "android:signed": "npm run android:release && (cd src/targets/mobile && apksigner sign --ks keys/android/cozy-banks-release-key.jks --out build/android/cozy-banks.apk platforms/android/app/build/outputs/apk/release/app-release-unsigned.apk)",
     "android:metadata": "(cd src/targets/mobile && bundle exec fastlane android metadata)",
     "android:publish": "npm run android:signed && (cd src/targets/mobile && bundle exec fastlane android deploy)",
     "ios:run": "(cd src/targets/mobile && cordova run ios --device)",
     "ios:run:emulator": "(cd src/targets/mobile && cordova run ios --emulator)",
     "ios:metadata": "(cd src/targets/mobile && bundle exec fastlane ios metadata)",
-    "ios:publish": "npm run build:mobile && (cd src/targets/mobile && bundle exec fastlane ios deploy)",
+    "ios:publish": "npm run mobile:build && (cd src/targets/mobile && bundle exec fastlane ios deploy)",
     "commons:services": "webpack --config config/webpack.target.services.js",
     "build:services": "NODE_ENV=services:production yarn run commons:services",
     "watch:services": "NODE_ENV=services:development yarn run commons:services --watch",
