--- a/package.json
+++ b/package.json
@@ -85,6 +85,8 @@
     "csswring": "6.0.3",
     "dummy-json": "2.0.0",
     "duplicate-package-checker-webpack-plugin": "2.1.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-15": "^1.0.5",
     "eslint-config-cozy-app": "^0.5.1",
     "eslint-loader": "2.0.0",
     "extract-text-webpack-plugin": "3.0.2",
