--- a/package.json
+++ b/package.json
@@ -164,7 +164,8 @@
     "stats-webpack-plugin": "^0.6.1",
     "string-replace-webpack-plugin": "^0.1.3",
     "timezone": "^1.0.13",
-    "velocity-animate": "^1.5.0"
+    "velocity-animate": "^1.5.0",
+    "yarn.lock": "^0.0.1-security"
   },
   "jest": {
     "moduleFileExtensions": [
