--- a/package.json
+++ b/package.json
@@ -140,7 +140,7 @@
     "cozy-client": "0.4.3",
     "cozy-client-js": "0.9.0",
     "cozy-konnector-libs": "^3.0.13",
-    "cozy-ui": "^9.0.0",
+    "cozy-ui": "git://github.com/cozy/cozy-ui.git#v9.0.1",
     "date-fns": "^1.28.2",
     "hammerjs": "^2.0.8",
     "localforage": "^1.5.0",
