--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "android:signed": "npm run android:release && (cd src/targets/mobile && apksigner sign --ks keys/android/cozy-banks-release-key.jks --out build/android/cozy-banks.apk platforms/android/app/build/outputs/apk/release/app-release-unsigned.apk)",
     "android:metadata": "(cd src/targets/mobile && bundle exec fastlane android metadata)",
     "android:publish": "npm run android:signed && (cd src/targets/mobile && bundle exec fastlane android deploy)",
+    "ios:install_pods": "(cd src/targets/mobile/platforms/ios && pod install)",
     "ios:run": "(cd src/targets/mobile && cordova run ios --device)",
     "ios:run:emulator": "(cd src/targets/mobile && cordova run ios --emulator)",
     "ios:metadata": "(cd src/targets/mobile && bundle exec fastlane ios metadata)",
