--- a/package.json
+++ b/package.json
@@ -147,6 +147,7 @@
     "cozy-konnector-libs": "^3.0.13",
     "cozy-ui": "9.3.1",
     "date-fns": "^1.28.2",
+    "fastclick": "^1.0.6",
     "hammerjs": "^2.0.8",
     "html-webpack-harddisk-plugin": "^0.2.0",
     "localforage": "^1.5.0",
