--- a/package.json
+++ b/package.json
@@ -143,6 +143,7 @@
     "cozy-konnector-libs": "^3.0.13",
     "cozy-ui": "git://github.com/cozy/cozy-ui.git#v9.0.1",
     "date-fns": "^1.28.2",
+    "fastclick": "^1.0.6",
     "hammerjs": "^2.0.8",
     "localforage": "^1.5.0",
     "lodash": "^4.17.4",
