--- a/package.json
+++ b/package.json
@@ -145,6 +145,7 @@
     "cozy-ui": "9.1.0",
     "date-fns": "^1.28.2",
     "hammerjs": "^2.0.8",
+    "html-webpack-harddisk-plugin": "^0.2.0",
     "localforage": "^1.5.0",
     "lodash": "^4.17.4",
     "mjml": "^3.3.5",
